# HugeInt

./: .gitignore  CMakeLists.txt  README.md
include/: HugeInt.h
source/: CMakeLists.txt  HugeInt.cpp  main.cpp
test/: CMakeLists.txt  HugeInt_tests.cpp
test/HugeInt/AddSub/: AddSub_tests.cpp
test/HugeInt/MulDiv/: MulDiv_tests.cpp
